--- a/inputedit/import/impedit.wxml
+++ b/inputedit/import/impedit.wxml
@@ -141,10 +141,11 @@
   </view>
 </template>
 
-<template name="i_ed">
-  <navigator url="/inputedit/import/addressedit?reqName={{gname}}">
-    <view class="weui-cell">{{p}}:{{c.sName}}</view>
-  </navigator>
+<template name="i_modalAddressBox">
+  <!-- <navigator url="/inputedit/import/addressedit?reqName={{gname}}">
+    
+  </navigator> -->
+  <view id="modalAddressBox" data-n="{{n}}" class="weui-cell" bindtap='i_modalAddressBox'>{{p}}:{{c.sName}}</view>
 </template>
 
 <template name="i_eDetail">
