--- a/libs/weimport.wxml
+++ b/libs/weimport.wxml
@@ -165,7 +165,7 @@
   <map longitude="{{c.longitude}}" latitude="{{c.latitude}}" scale="28" show-location style="width: 100%; height: 300px;"></map>
 </template>
 
-<template name="s_ed">
+<template name="s_modalAddressBox">
   <view class="weui-cell__hd">{{p}}:</view>
   <view class="weui-cell__bd">{{c.sName}}</view>
 </template>
