--- a/libs/wepage.wxml
+++ b/libs/wepage.wxml
@@ -91,6 +91,7 @@
     </block>
   </view>
   <view style="padding-bottom:100rpx;"></view>
+  <view class="page__ft weui-footer_fixed-bottom">
     <button class="weui-btn" style="display:{{enMenu=='none' && uEV ? 'inline-block' : 'none'}}" type="primary" size="mini" formType="submit" id="fSave">提交</button>
     <button class="weui-btn" style="display:{{enMenu=='none' && targetId=='0' ? 'inline-block' : 'none'}}" type="primary" size="mini" formType="submit" id="fStorage">保存</button>
     <button class="weui-btn" style="display:{{ enMenu }}" type="warn" size="mini" formType="submit" id="fdeldata">删除</button>
@@ -106,77 +107,80 @@
 
 <template name="p_modalSwitchBox">
 <view wx:if="{{pageName=='modalSwitchBox'}}" class="modal_box" bindtap="f_modalSwitchBox">
-  <view class="page__title" style="margin-top:{{statusBar+capsule}}px;">{{modalData.uName}}</view>
-  <view class="close_icon" id="fBack" bindtap="f_modalSwitchBox">×</view>
+  <view class="page__hd">
+    <view class="page__title">{{modalData.uName}}</view>
+    <view class="close_icon" id="fBack" bindtap="f_modalSwitchBox">×</view>
+  </view>
   <view animation="{{animationData}}" class="modal_attr_box" wx:if="{pageName=='modalSwitchBox'}}">
-      <view class="drawer_standard">
-        <block class="highlight" wx:for="{{reqData}}" wx:key="index">
-          <template is="s_{{item.t}}" data="{{...item, c:pageData[idClicked][item.gname]}}"/>
-        </block>
+    <view class="page__bd page__bd_spacing">
+      <block wx:for="{{reqData}}" wx:key="index">
+        <template is="s_{{item.t}}" data="{{...item, c:pageData[idClicked][item.gname]}}"/>
+      </block>
+      <view style="padding-bottom:100rpx;"></view>
+    </view>
+    <view class="page__ft weui-footer_fixed-bottom">
+      <view wx:if="{{smtName}}">
+        <button class="weui-btn" size="mini" bindtap="f_modalSwitchBox" id="fSwitch">{{smtName}}</button>
+        <button class="weui-btn" type="primary" size="mini" bindtap="f_modalSwitchBox" id="fBack">返回</button>
       </view>
-     <view style="padding-bottom:100rpx;"></view>
-     <view class="page__ft weui-footer_fixed-bottom">
-       <view wx:if="{{smtName}}">
-         <button class="weui-btn" size="mini" bindtap="f_modalSwitchBox" id="fSwitch">{{smtName}}</button>
-         <button class="weui-btn" type="primary" size="mini" bindtap="f_modalSwitchBox" id="fBack">返回</button>
-       </view>
-       <view wx:else>
-         <button bindtap="hideModal" id="fBack">我知道了</button>
-       </view>
-     </view>
+      <view wx:else>
+        <button bindtap="hideModal" id="fBack">我知道了</button>
+      </view>
+    </view>
   </view>
 </view>
 </template>
 
 <template name="p_modalAddressBox">
-<view wx:if="{{pageName=='modalAddressBox'}}" class="modal_box" bindtap="f_modalAddressBox">
-<view class="page__title" style="margin-top:{{statusBar+capsule}}px;">{{p}}</view>
-<view class="close_icon" id="fBack" bindtap="f_modalAddressBox">×</view>
+<view wx:if="{{pageName=='modalAddressBox'}}" class="modal_box" bindtap="i_modalAddressBox">
+  <view class="page__title" style="margin-top:{{statusBar+capsule}}px;">{{p}}</view>
+  <view class="close_icon" id="fBack" bindtap="i_modalAddressBox">×</view>
   <view animation="{{animationData}}" class="modal_attr_box" wx:if="{pageName=='modalAddressBox'}}">
-  <view class="page__hd">
-    <view class="page__title">选择区(县)</view>
-       <picker-view indicator-style="height: 40rpx;" style="width: 100%; height: 300rpx;" value="{{adcvalue}}" id="faddclass" bindchange="f_modalAddressBox">
-        <picker-view-column>
-            <view wx:for="{{adclist}}" wx:key="{{index}}" style="line-height: 36rpx">{{item.n}}</view>
-        </picker-view-column>
-        <picker-view-column>
-            <view wx:for="{{adclist[adcvalue[0]].st}}" wx:key="{{index}}" style="line-height: 36rpx">{{item.n}}</view>
-        </picker-view-column>
-        <picker-view-column>
-            <view wx:for="{{adclist[adcvalue[0]].st[adcvalue[1]].ct}}" wx:key="{{index}}" style="line-height: 36rpx">{{item.n}}</view>
-        </picker-view-column>
-      </picker-view>
-    <view hidden="{{asaddv}}">
-      <button class="page__title" id="raddgroup" bindtap="f_modalAddressBox">点此处选择村(社区)</button>
-      <picker-view indicator-style="height: 40rpx;" style="width: 100%; height: 300rpx;" value="{{adgvalue}}" id="saddgroup" bindchange="f_modalAddressBox">
+    <view class="page__hd">
+      <view class="page__title">选择区(县)</view>
+        <picker-view indicator-style="height: 40rpx;" style="width: 100%; height: 300rpx;" value="{{adcvalue}}" id="faddclass" bindchange="i_modalAddressBox">
           <picker-view-column>
-              <view wx:for="{{adglist}}" wx:key="{{index}}" style="line-height: 36rpx">{{item.n}}</view>
+              <view wx:for="{{adclist}}" wx:key="{{index}}" style="line-height: 36rpx">{{item.n}}</view>
           </picker-view-column>
           <picker-view-column>
-              <view wx:for="{{adglist[adgvalue[0]].cm}}" wx:key="{{index}}" style="line-height: 36rpx">{{item.n}}</view>
+              <view wx:for="{{adclist[adcvalue[0]].st}}" wx:key="{{index}}" style="line-height: 36rpx">{{item.n}}</view>
           </picker-view-column>
-      </picker-view>
+          <picker-view-column>
+              <view wx:for="{{adclist[adcvalue[0]].st[adcvalue[1]].ct}}" wx:key="{{index}}" style="line-height: 36rpx">{{item.n}}</view>
+          </picker-view-column>
+        </picker-view>
+      <view hidden="{{asaddv}}">
+        <button class="page__title" id="raddgroup" bindtap="i_modalAddressBox">点此处选择村(社区)</button>
+        <picker-view indicator-style="height: 40rpx;" style="width: 100%; height: 300rpx;" value="{{adgvalue}}" id="saddgroup" bindchange="i_modalAddressBox">
+            <picker-view-column>
+                <view wx:for="{{adglist}}" wx:key="{{index}}" style="line-height: 36rpx">{{item.n}}</view>
+            </picker-view-column>
+            <picker-view-column>
+                <view wx:for="{{adglist[adgvalue[0]].cm}}" wx:key="{{index}}" style="line-height: 36rpx">{{item.n}}</view>
+            </picker-view-column>
+        </picker-view>
+      </view>
     </view>
+    <form class="page__bd" bindsubmit="i_modalAddressBox">
+      <view class="weui-cells__title">详细地址:</view>
+      <view class="weui-cells weui-cells_after-title">
+        <view class="weui-cell">
+          <view class="weui-cell__bd">
+            <textarea class="weui-textarea" auto-height name="address1" value="{{address1}}" />
+          </view>
+        </view>
+        <view class="weui-cell">
+          <view class="weui-cell__bd">
+            <textarea class="weui-textarea" auto-height name="address2" value="{{address2}}" />
+          </view>
+        </view>
+      </view>
+      <view style="padding-bottom:100rpx;"></view>
+      <view class="page__ft weui-footer_fixed-bottom">
+        <button class="weui-btn" formType="submit" size="mini" id="fSave">确定</button>
+        <button class="weui-btn" type="primary" size="mini" bindtap="i_modalAddressBox" id="fBack">返回</button>
+      </view>
+    </form>
   </view>
-  <form class="page__ft" bindsubmit="f_modalAddressBox">
-    <view class="weui-cells__title">详细地址:</view>
-    <view class="weui-cells weui-cells_after-title">
-      <view class="weui-cell">
-        <view class="weui-cell__bd">
-          <textarea class="weui-textarea" auto-height name="address1" value="{{address1}}" />
-        </view>
-      </view>
-      <view class="weui-cell">
-        <view class="weui-cell__bd">
-          <textarea class="weui-textarea" auto-height name="address2" value="{{address2}}" />
-        </view>
-      </view>
-    </view>
-    <view style="padding-bottom:100rpx;"></view>
-    <view class="page__ft weui-footer_fixed-bottom">
-      <button class="weui-btn" formType="submit" size="mini" id="fSave">确定</button>
-      <button class="weui-btn" type="primary" size="mini" bindtap="f_modalAddressBox" id="fBack">返回</button>
-    </view>
-  </form>
 </view>
 </template>
