--- a/app.wxss
+++ b/app.wxss
@@ -7,11 +7,10 @@ page{
     /* font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif; */
 }
 .page__main {
-  padding-top: 10rpx;
+  padding-top: 6rpx;
 }
 .page__sub {
   padding-top: 10rpx;
-  padding-bottom: 100rpx;
 }
 .navigationBar {
   position: fixed;
@@ -122,21 +121,21 @@ page{
   padding-right: 40rpx;
 }
 .page__ft{
-    padding-bottom: 10rpx;
-    text-align: center;
+  padding-bottom: 10rpx;
+  text-align: center;
 }
 
 .page__title {
-    text-align: center;
-    font-size: 36rpx;
-    font-weight: 400;
+  text-align: center;
+  font-size: 36rpx;
+  font-weight: 400;
 }
 
 .page__desc {
-    margin-top: 6rpx;
-    color: #888888;
-    text-align: left;
-    font-size: 28rpx;
+  margin-top: 6rpx;
+  color: #888888;
+  text-align: left;
+  font-size: 28rpx;
 }
 .summary {
 	display: flex;
@@ -222,10 +221,9 @@ page{
   width: 100%;
   height: 100%;
   position: fixed;
-  overflow: hidden;
   top: 0;
   left: 0;
-  color: #fff;
+   color: #fff;
   background-color: #8FB0D1;
   -moz-opacity: 0.8;
   opacity: 0.8;
@@ -235,9 +233,9 @@ page{
 
 .modal_attr_box {
   width: 100%;
-  overflow: hidden;
+  overflow: scroll; 
   position: fixed;
-  bottom: 0;
+  bottom: 0; 
   left: 0;
   z-index: 700;
   background: silver;
@@ -260,8 +258,9 @@ page{
 }
 
 .drawer_attr_content {
-  padding: 20rpx;
-  overflow-y: scroll;
+  color: #232626;
+	font-size: 32rpx;
+	background-color: #f9f9f9;
 }
 
 .drawer_amount{
@@ -276,7 +275,7 @@ page{
 	text-align: center;
 	color: #232626;
 	font-size: 32rpx;
-	background-color: #f9f9f9; 
+	background-color: #f9f9f9;
 }
 
 .drawer_btn {
