--- a/libs/wepage.wxml
+++ b/libs/wepage.wxml
@@ -60,7 +60,7 @@
 </template>
 
 <template name="p_tabPanelToModal">
-<view wx:if="{{pageName=='tabPanelToModal'}}" class="page__sub" id="model-{{pNo}}">
+<view class="page__sub" id="model-{{pNo}}">
   <view class="weui-tab__panel">
     <block wx:for="{{tPage}}" wx:key="{{index}}">
       <view class="weui-media-box weui-media-box_appmsg" id="{{item}}" data-pname="modalSwitchBox" hover="true" hover-class="weui-cell_active" bindtap="f_modalSwitchBox">
@@ -106,26 +106,28 @@
 </template>
 
 <template name="p_modalSwitchBox">
-<view wx:if="{{pageName=='modalSwitchBox'}}" class="modal_box" bindtap="f_modalSwitchBox">
-  <view class="page__hd">
-    <view class="page__title">{{modalData.uName}}</view>
-    <view class="close_icon" id="fBack" bindtap="f_modalSwitchBox">×</view>
-  </view>
-  <view animation="{{animationData}}" class="modal_attr_box" wx:if="{pageName=='modalSwitchBox'}}">
-    <view class="page__bd page__bd_spacing">
-      <block wx:for="{{reqData}}" wx:key="index">
-        <template is="s_{{item.t}}" data="{{...item, c:pageData[idClicked][item.gname]}}"/>
-      </block>
-      <view style="padding-bottom:100rpx;"></view>
+<view class="modal_box" id="fBack" bindtap="f_modalSwitchBox">
+  <view animation="{{animationData}}" class="modal_attr_box" wx:if="{{showModalBox}}">
+    <view class="page__hd">
+      <view class="page__title">{{pageData[idClicked].uName}}</view>
+      <view class="close_icon" id="fBack" bindtap="f_modalSwitchBox">×</view>
     </view>
-    <view class="page__ft weui-footer_fixed-bottom">
-      <view wx:if="{{smtName}}">
-        <button class="weui-btn" size="mini" bindtap="f_modalSwitchBox" id="fSwitch">{{smtName}}</button>
-        <button class="weui-btn" type="primary" size="mini" bindtap="f_modalSwitchBox" id="fBack">返回</button>
+    <view class="page__ac_spacing">
+      <view class="drawer_attr_content">
+        <block wx:for="{{reqData}}" wx:key="index">
+          <template is="s_{{item.t}}" data="{{...item, c:pageData[idClicked][item.gname]}}"/>
+        </block>
       </view>
-      <view wx:else>
-        <button bindtap="hideModal" id="fBack">我知道了</button>
-      </view>
+    </view>
+    <view style="padding-bottom:100rpx;"></view>
+  </view>
+  <view wx:if="{{showModalBox}}" class="page__ft weui-footer_fixed-bottom">
+    <view wx:if="{{smtName}}">
+      <button class="weui-btn" size="mini" bindtap="f_modalSwitchBox" id="fSwitch">{{smtName}}</button>
+      <button class="weui-btn" type="primary" size="mini" bindtap="f_modalSwitchBox" id="fBack">返回</button>
+    </view>
+    <view wx:else>
+      <button bindtap="hideModal" id="fBack">我知道了</button>
     </view>
   </view>
 </view>
