--- a/inputedit/analyzing/analyzing.wxml
+++ b/inputedit/analyzing/analyzing.wxml
@@ -1,2 +1,7 @@
-
-<text>客户分析</text>
+<import src="../../libs/wepage.wxml" />
+<view class="page">
+  <template is="p_navBar__back" data="{{...pw,navBarTitle:'客户分析'}}"/>
+  <view style="display:block;padding:1px;">
+    <canvas canvas-id="pieCanvas" class="weui-canvas"> </canvas>
+  </view>
+</view>
