--- a/inputedit/capital/capital.wxml
+++ b/inputedit/capital/capital.wxml
@@ -1,5 +1,7 @@
+<import src="../../libs/wepage.wxml" />
 <view class="page">
-    <view style="display:block;padding:1px;">
-        <canvas canvas-id="pieCanvas" class="weui-canvas"> </canvas>
-    </view>  
+  <template is="p_navBar__back" data="{{...pw,navBarTitle:'资金状况'}}"/>
+  <view style="display:block;padding:1px;">
+    <canvas canvas-id="pieCanvas" class="weui-canvas"> </canvas>
+  </view>
 </view>
