--- a/inputedit/storeflow/storeflow.wxml
+++ b/inputedit/storeflow/storeflow.wxml
@@ -1,5 +1,7 @@
+<import src="../../libs/wepage.wxml" />
 <view class="page">
-    <view style="display:block;padding:1px;">
-        <canvas canvas-id="lineCanvas" class="weui-canvas"> </canvas>
-    </view>  
+  <template is="p_navBar__back" data="{{...pw,navBarTitle:'流量分析'}}"/>
+  <view style="display:block;padding:1px;">
+    <canvas canvas-id="lineCanvas" class="weui-canvas"> </canvas>
+  </view>
 </view>
